# ec-cli

./: .gitignore  ARCHITECTURE.md  Cargo.toml  EXAMPLES.md  README.md
src/: cli.rs  client.rs  crypto.rs  display.rs  error.rs  main.rs  models.rs  storage.rs
