[package]
name = "ec-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "color"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.8"
cbc = "0.1"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
html2text = "0.12"
regex = "1.11"
dirs = "5.0"
term_size = "0.3"
